WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45714
chromium/mac: crash less in compositor mode
https://bugs.webkit.org/show_bug.cgi?id=45714
Summary
chromium/mac: crash less in compositor mode
Nico Weber
Reported
2010-09-13 15:42:09 PDT
chromium/mac: crash less in compositor mode
Attachments
Patch
(2.31 KB, patch)
2010-09-13 15:44 PDT
,
Nico Weber
no flags
Details
Formatted Diff
Diff
Patch
(2.38 KB, patch)
2010-09-13 16:15 PDT
,
Nico Weber
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nico Weber
Comment 1
2010-09-13 15:44:29 PDT
Created
attachment 67481
[details]
Patch
Nico Weber
Comment 2
2010-09-13 15:46:55 PDT
I didn't do the skia part since NativeImageSkia only has an SkBitmap copy constructor, not a NativeImageSkia copy constructor, and I wasn't sure how important that "is complete?" stuff is. Also, I don't have a machine/build with skia set up, so maybe one of you could deal with the non-mac part?
James Robinson
Comment 3
2010-09-13 16:06:13 PDT
Comment on
attachment 67481
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=67481&action=prettypatch
I think the compiler-generated copy constructor for NativeImageSkia should work OK, but that would have to be checked. Could you just file another bug on the skia part? ChangeLog format is odd here - normally this would be something like "[chromium] Image layers crash on mac because ..."
Nico Weber
Comment 4
2010-09-13 16:15:58 PDT
Created
attachment 67487
[details]
Patch
Nico Weber
Comment 5
2010-09-13 16:18:10 PDT
Updated changelog, filed
https://bugs.webkit.org/show_bug.cgi?id=45717
for skia.
Darin Fisher (:fishd, Google)
Comment 6
2010-09-13 17:01:56 PDT
Comment on
attachment 67487
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=67487&action=prettypatch
> WebCore/platform/graphics/chromium/ImageLayerChromium.h:61 > + // FIXME: This needs to be an owning type.
In the Skia build, NativeImagePtr roughly corresponds to a SkBitmap, which is itself an owning (ref-counted internally) type. Perhaps you can just make this be a NativeImageSkia then?
Darin Fisher (:fishd, Google)
Comment 7
2010-09-13 17:02:44 PDT
Comment on
attachment 67487
[details]
Patch OK, I see that you guys already discussed NativeImageSkia. R=me
WebKit Commit Bot
Comment 8
2010-09-14 10:17:45 PDT
Comment on
attachment 67487
[details]
Patch Clearing flags on attachment: 67487 Committed
r67477
: <
http://trac.webkit.org/changeset/67477
>
WebKit Commit Bot
Comment 9
2010-09-14 10:17:50 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 10
2010-09-14 12:40:13 PDT
http://trac.webkit.org/changeset/67477
might have broken Chromium Win Release The following changes are on the blame list:
http://trac.webkit.org/changeset/67476
http://trac.webkit.org/changeset/67477
Nico Weber
Comment 11
2010-09-14 12:42:34 PDT
Yes, I broke this (I wrote #elif instead of #else). But tony^work fixed it already.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug