2010-09-14  Nico Weber  <thakis@chromium.org>

Reviewed by Darin Fisher.

        [chromium]: crash less in compositor mode on mac
        https://bugs.webkit.org/show_bug.cgi?id=45714

        The contents image can go away when the dom is updated. Since the
        layer tree is updated asynchronously, it needs to ref the native image,
        else it will hold on to a stale object.

        This still needs to be done for skia, too.

        * platform/graphics/chromium/ImageLayerChromium.h:
        * platform/graphics/chromium/ImageLayerChromium.cpp:

Canonical link: https://commits.webkit.org/58208@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67477 268f45cc-cd09-0410-ab3c-d52691b4dbfc